sugar-presence-service (0.79.0-3) UNRELEASED; urgency=low

  * Pass over maintenance of the package to the OLPC team: Change
    Maintainer, and add myself to Uploaders.
  * Build-depend on python-all-dev (not python-dev).
  * Fix README.packaging to use "pull; fetch --tags" (not "pull -t").
  * Depend on python-sugar-toolkit (not sugar-toolkit).

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 11 Mar 2008 09:45:18 +0100

sugar-presence-service (0.79.0-2) unstable; urgency=low

  * Build binary package as arch-all.
  * Depend on python-gobject, python-dbus (new enough for reliable PS),
    python-telepathy, sugar-toolkit, telepathy-gabble, telepathy-salut,
    telepathy-stream-engine and openssh-client.
  * Recommend sugar and avahi-daemon.
  * Fix watch file.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 11 Mar 2008 02:59:38 +0100

sugar-presence-service (0.79.0-1) unstable; urgency=low

  * Initial release. Closes: bug#444021.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 08 Mar 2008 21:51:42 +0100