@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Debian OLPC <pkg-olpc-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>
-Build-Depends: cdbs (>= 0.4.39), debhelper (>= 5), devscripts (>= 2.10.7), dh-buildinfo, python-all-dev, python-dbus, python-gobject, python-central
+Build-Depends: cdbs (>= 0.4.39), python-dev (>= 2.3.5-11), python-central (>= 0.6), debhelper (>= 5), devscripts (>= 2.10.7), dh-buildinfo, python-dbus, python-gobject
 Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/collab-maint/sugar-presence-service.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/sugar-presence-service.git;a=summary
