@@ -3,8 +3,9 @@
 # Copyright © 2008 Jonas Smedegaard <dr@jones.dk>
 
 # NB! Local CDBS tweaks in use. More info in README.cdbs-tweaks
+DEB_PYTHON_SYSTEM = pycentral
 include debian/cdbs/1/rules/upstream-tarball.mk
-include /usr/share/cdbs/1/class/autotools.mk
+include debian/cdbs/1/class/py-compile.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include debian/cdbs/1/rules/copyright-check.mk
 include debian/cdbs/1/rules/buildinfo.mk
@@ -17,17 +18,8 @@ DEB_UPSTREAM_TARBALL_EXTENSION = tar.bz2
 
 DEB_MAKE_CHECK_TARGET = check
 
-binary-install/$(pkg)::
-	dh_pycentral
-
-# Needed by upstream build process
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-all-dev
-
 # Needed by upstream unittests
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-dbus, python-gobject
-
-# Needed for our packaging routines
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-central
 
 # Merge duplicate build-dependencies
 CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed -e '/\bcdbs (>= 0.4.39)/ s/ *,* *\bcdbs (>= \(0.4.23-1.1\)) *,* */, /g' -e 's/^ *, *//' -e 's/ *, *$$//')
